change to new library completed and Firebase added